Bug 163131 - Start center logo has wrong colors
Summary: Start center logo has wrong colors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: CairoSDPR
  Show dependency treegraph
 
Reported: 2024-09-24 13:50 UTC by Xisco Faulí
Modified: 2024-09-30 09:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (158.59 KB, image/png)
2024-09-24 13:50 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-09-24 13:50:15 UTC
Created attachment 196653 [details]
screenshot

Steps to reproduce:
1. Clean the user profile
2. Open LibreOffice

See screenshot.

Reproduced in

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4787fd4fc86230893a6da309f45964116b3a67df
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-09-24 13:51:44 UTC
Regression introduced by

commit bf3cd8e50f886084500e3a8ff72ff4ffab05ddd7	[log]
author	Armin Le Grand (Collabora) <Armin.Le.Grand@me.com>	Mon Aug 26 14:25:19 2024 +0200
committer	Armin Le Grand <Armin.Le.Grand@me.com>	Tue Aug 27 13:05:19 2024 +0200
tree 13c1b188d71e0c76625aea7786ba35476670233f
parent 67fe2bff5a19f5be603ad9f151938c96ca87ce63 [diff]

CairoSDPR: Make using SDPR dependent of ExperimentalMode

Bisected with: bibisect-linux64-25.2
Comment 2 Armin Le Grand (collabora) 2024-09-24 16:04:36 UTC
Forgot to support BColorModifierStack for linear and radial direct support for SVG gradients, see https://gerrit.libreoffice.org/c/core/+/173871
Comment 3 Commit Notification 2024-09-25 08:57:14 UTC
Armin Le Grand (Collabora) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dad5b34d011da41d536eb0db9635ac84e51bfcd5

tdf#163131 CairoSDPR:

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.