tdf#163131 CairoSDPR:

Added BColorModifierStack to SVG linear and radial
gradient direct support, was missing.

Change-Id: I1405ea0653180fa695b40082bf8b8520441d0620
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173871
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>